# proyecto_3

./: CMakeLists.txt  ControlVideo.cpp  ControlVideo.h  Inicio.cpp  Inicio.h  Singleton.cpp  Singleton.h  main.cpp
Listas/: LinkedList.h  Node.h
cmake_modules/: FindSMFL.cmake
